...
            value = email,
            onValueChange = {
                email = it
                mensajeError = ""
            },
            label = {
                Text("Correo electrónico")
            },
            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Email
            ),
            singleLine = true,
            modifier = Modifier.fillMaxWidth()
...
            value = password,
            onValueChange = {
                password = it
                mensajeError = ""
            },
            label = {
                Text("Contraseña")
            },
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Password
            ),
            singleLine = true,
...
                    passwordLimpia.length < 6 -> {
                        mensajeError =
                            "La contraseña debe tener al menos 6 caracteres."
                    }

                    !emailLimpio.equals(
                        "demo@reservasport.cl",
                        ignoreCase = true
                    ) ||
                            passwordLimpia != "Reserva123" -> {
                        mensajeError =
                            "Correo o contraseña incorrectos."
                    }
...
                        )
                    }
                }
            },
            modifier = Modifier.fillMaxWidth()
        ) {
            Text("Ingresar")
        }

        Spacer(
            modifier = Modifier.height(8.dp)
        )

...
